[package]
name = "axum-masque"
version = "0.1.0"
edition = "2024"

[features]
default = ["msquic-async"]
msquic-async = ["h3-util/msquic-async"]

[dependencies]
anyhow = "1"
axum = { version = "0.8", default-features = false }
bytes = "1"
futures = "0.3"
h3 = "0.0.8"
h3-datagram = "0.0.2"
h3-util = { path = "../tonic-h3/h3-util", default-features = false }
http = "1"
http-body = "1"
http-body-util = { version = "0.1.3", features = ["channel"] }
hyper = { version = "1" , default-features = false}
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tower = { version = "0.5", default-features = false, features = ["buffer", "util"] }
tracing = "0.1.40"

[dev-dependencies]
tempfile = "3"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "time", "tracing-log"] }
